        - Improved handling of connectors created without a protocol.
          Contributed by Avi Flax.
        - Representations returned by the CLAP connector now have their
          modification date set if it is based on a file. Suggested by
          Keke.
        - Refactored and improved logging for Guard and challenge
          processing. Suggested by Alex Milowski.
 
 - 1.1 Milestone 2 (2008-02-29)
    - Bugs fixed
        - Fixed NPE in Connector class. Reported by Rob Heittman and
          fixed by Tim Peierls.
        - WriterRepresentation was missing a default implementation for
          getReader() abstract method.
        - If an error is found in HttpClientHelper.sendRequest(),
          StreamClientHelper ignores it and continues to parse the
          response when it should stop processing. Fixed by Kevin
          Conaway.
        - Status.isSuccess(), is*Error(), isRedirection() and isInfo()
          methods now support status classes as specified in HTTP 1.1.
          Reported by Paul J. Lucas.
        - The request ClientInfo address and port were not available
          for the default connector and the Grizzly connector. Patch
          contributed by Kevin Conaway.
        - Fixed issue in SpringHost preventing usage of the
          setRoutes(Map) method. Replaced with a setAttachments(Map)
          method. Added Javadocs example. Reported by Simon Olofsson.
        - ResourceException wasn't setting a message. Reported by Derek
          Chiles.
        - Representation.isAvailable() now returns false if the size is
          '0'.
        - Refactoring of HTTP server connectors code to better deal
          with HEAD request, 1xx, 204, 205, 304 status codes. Issues
          reported by Alex Milowski.
        - Ensured all modifiable collections are properly documented in
          the API. Suggested by Stephan Koops.
        - Fixed Spring XML loading issue related to validation in
          SpringContext class.